syntax = "proto3";

option csharp_namespace = "Cope.SpaceRogue.Galaxy.API.Proto";

service PlanetsService {
  rpc AddPlanet (AddPlanetRequest) returns (AddPlanetReply);
  rpc UpdatePlanet (UpdatePlanetRequest) returns (UpdatePlanetReply);
  rpc DeletePlanet (DeletePlanetRequest) returns (DeletePlanetReply);
}

message AddPlanetRequest {
    string Name = 1;
    int32 PosX = 2;
	int32 PosY = 3;
	int32 PosZ = 4;
}

message AddPlanetReply {
	string PlanetId = 1;
	string Message = 2;
}

message UpdatePlanetRequest {
	string PlanetId = 1;
	string MarketPlaceId = 2;
	string Name = 3;
    int32 PosX = 4;
	int32 PosY = 5;
	int32 PosZ = 6;
}

message UpdatePlanetReply {
	bool Updated = 1;
	string Message = 2;
}

message DeletePlanetRequest {
	string PlanetId = 1;
}

message DeletePlanetReply {
	bool Deleted = 1;
	string Message = 2;
}