syntax = "proto3";

option csharp_namespace = "Cope.SpaceRogue.Maintenance.API.Proto";

service ShipsService {
  rpc AddShip (AddShipRequest) returns (AddShipReply);
  rpc GetShip (ShipRequest) returns (ShipReply);
  rpc GetShips (ShipsRequest) returns (ShipsReply);
}

message AddShipReply {
   bool Added = 1;
   string Message = 2;
} 

message ShipsRequest {
	bool All = 1;
	string PlayerId = 2;
}

message ShipRequest {
   string shipId = 1;
}

message ShipsReply {
   repeated ShipMessage ships = 1;
}

message ShipReply {
   ShipMessage ship = 1;
}

message AddShipRequest {
	string ShipId = 1;
	string Name = 2;
	string PlayerId = 3;

}

message ShipMessage {
	string ShipId = 1;
	string Name = 2;
	string PlayerName = 3;
	int32 SpeedValue = 4;
	int32 AttackValue = 5;
	int32 DefenceValue = 6;
	int32 SensorRangeValue = 7;
	int32 HullValue = 8;
	int32 ShieldsValue = 9;
	repeated string FeatureNames = 10;
}